Closed
Bug 327705
Opened 19 years ago
Closed 19 years ago
ASSERTION: can't get bounding box for element without frame
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: longsonr)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
378 bytes,
image/svg+xml
|
Details | |
1.95 KB,
patch
|
tor
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Reporter | ||
Comment 1•19 years ago
|
||
Reporter | ||
Comment 2•19 years ago
|
||
###!!! ASSERTION: can't get bounding box for element without frame: 'frame',
file mozilla/content/svg/content/src/nsSVGGraphicElement.cpp, line 128
![]() |
||
Comment 3•19 years ago
|
||
This assertion is just bogus and should be removed.
Assignee | ||
Comment 4•19 years ago
|
||
Note that we have bug 293581 to track the fact that getBBox does not work onload so this just removes the assert.
Attachment #225445 -
Flags: review?(tor) → review+
Assignee | ||
Updated•19 years ago
|
Attachment #225445 -
Flags: superreview?(bzbarsky)
![]() |
||
Updated•19 years ago
|
Attachment #225445 -
Flags: superreview?(bzbarsky) → superreview+
Assignee | ||
Comment 5•19 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•