Bug 327705 - remove ASSERTION: can't get bounding box for element without frame. r=tor,sr=bzbarsky