content/svg/content/src/nsSVGGraphicElement.cpp
@@ -93,8 +93,6 @@ NS_IMETHODIMP nsSVGGraphicElement::GetBBox(nsIDOMSVGRect **_retval)
 
   nsIFrame* frame = GetPrimaryFrame(Flush_Layout);
 
-  NS_ASSERTION(frame, "can't get bounding box for element without frame");
-
   if (frame) {
     nsISVGChildFrame* svgframe;
     CallQueryInterface(frame, &svgframe);
